# sorer

./: Cargo.toml  Dockerfile  Makefile  README.md
benches/: medium_row.sor  parser.rs  schema.sor  schema_inference.rs  thin_row.sor  wide_row.sor
examples/: sorer.rs  sorterator.rs
src/: clap.rs  dataframe.rs  lib.rs  main.rs  parsers.rs  reader.rs  schema.rs
test/: Makefile  expected.txt  result.txt
tests/: 0.sor  1.sor  2.sor  4.sor  lib.rs  schema1.sor  schema2.sor  schema3.sor  sor.txt  sor_terator.sor
