[package]
name = "sorer"
version = "0.1.0"
authors = ["Thomas Harmon <harmon.t@husky.neu.edu>", "Samedh Gupta <gupta.sam@husky.neu.edu>"]
edition = "2018"
default-run = "sorer"
license = "MIT"
description = "A schema on read file parser"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "5.1.0"
rand = "0.7.3"
num_cpus = "1.12.0"
serde = {version = "1.0.105", features=["derive"]}
deepsize = "0.1.2"

[profile.release]
codegen-units = 1
panic = 'abort'
lto = true

[dev-dependencies]
criterion = "0.3.1"

[[bench]]
name = "schema_inference"
harness = false

