[package]
name = "sorer"
version = "0.1.0"
authors = ["Thomas Harmon <harmon.t@husky.neu.edu>", "Samedh Gupta <gupta.sam@husky.neu.edu>"]
edition = "2018"
license = "MIT"
description = "A schema on read file parser"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "5.1.0"
rand = "0.7.3"
num_cpus = "1.12.0"
serde = { version = "1.0.105", features = ["derive"] }
deepsize = "0.1.2"
easy_reader = "0.5.0"

[profile.release]
codegen-units = 1
panic = 'abort'
lto = true

[dev-dependencies]
criterion = "0.3.1"
bytecount = "0.6.0"
clap = { git = "https://github.com/clap-rs/clap/" }

[lib]
bench = false

[[bin]]
name = "generate"
path = "src/bin/generate.rs"
bench = false

[[bench]]
name = "schema_inference"
harness = false

[[bench]]
name = "parser"
harness = false

